add option to initialize YourKit (of course Yourkit needs to be installed
git-svn-id: https://svn.apache.org/repos/asf/cocoon/branches/BRANCH_2_1_X@170640 13f79535-47bb-0310-9956-ffa450edef68